--- a/requirements.txt
+++ b/requirements.txt
@@ -2,167 +2,79 @@
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
 # created-by: conda 24.11.2
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-aiohappyeyeballs=2.4.4=py312h06a4308_0
-aiohttp=3.11.10=py312h5eee18b_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-arrow-cpp=17.0.0=h865e1df_1
-attrs=24.3.0=py312h06a4308_0
-aws-c-auth=0.6.19=h5eee18b_0
-aws-c-cal=0.5.20=hdbd6064_0
-aws-c-common=0.8.5=h5eee18b_0
-aws-c-compression=0.2.16=h5eee18b_0
-aws-c-event-stream=0.2.15=h6a678d5_0
-aws-c-http=0.6.25=h5eee18b_0
-aws-c-io=0.13.10=h5eee18b_0
-aws-c-mqtt=0.7.13=h5eee18b_0
-aws-c-s3=0.1.51=hdbd6064_0
-aws-c-sdkutils=0.1.6=h5eee18b_0
-aws-checksums=0.1.13=h5eee18b_0
-aws-crt-cpp=0.18.16=h6a678d5_0
-aws-sdk-cpp=1.11.212=hecad206_0
-blas=1.0=openblas
-boost-cpp=1.82.0=hdb19cb5_2
-bottleneck=1.4.2=py312ha883a20_0
-brotli-python=1.0.9=py312h6a678d5_9
-bzip2=1.0.8=h5eee18b_6
-c-ares=1.19.1=h5eee18b_0
-ca-certificates=2024.12.31=h06a4308_0
-certifi=2024.12.14=py312h06a4308_0
-charset-normalizer=3.3.2=pyhd3eb1b0_0
-contourpy=1.3.1=pypi_0
-cuda-cudart=12.6.77=h5888daf_0
-cuda-cudart_linux-64=12.6.77=h3f2d84a_0
-cuda-nvrtc=12.6.85=hbd13f7d_0
-cuda-version=12.6=h7480c83_3
-cycler=0.12.1=pypi_0
-datasets=2.19.1=py312h06a4308_0
-dill=0.3.8=py312h06a4308_0
-faiss=1.9.0=py312cuda126h56f033e_0_cuda
-faiss-gpu=1.9.0=h418687c_0
-filelock=3.13.1=py312h06a4308_0
-fonttools=4.55.3=pypi_0
-freetype=2.12.1=h4a9f257_0
-frozenlist=1.5.0=py312h5eee18b_0
-fsspec=2024.3.1=py312h06a4308_0
-gflags=2.2.2=h6a678d5_1
-glog=0.5.0=h6a678d5_1
-huggingface_hub=0.24.6=py312h06a4308_0
-icu=73.1=h6a678d5_0
-idna=3.7=py312h06a4308_0
-jinja2=3.1.4=py312h06a4308_1
-jpeg=9e=h5eee18b_3
-kiwisolver=1.4.8=pypi_0
-krb5=1.20.1=h143b758_1
-lcms2=2.16=hb9589c4_0
-ld_impl_linux-64=2.40=h12ee557_0
-lerc=4.0.0=h6a678d5_0
-libabseil=20240116.2=cxx17_h6a678d5_0
-libblas=3.9.0=16_linux64_openblas
-libboost=1.82.0=h109eef0_2
-libbrotlicommon=1.0.9=h5eee18b_9
-libbrotlidec=1.0.9=h5eee18b_9
-libbrotlienc=1.0.9=h5eee18b_9
-libcublas=12.6.4.1=hbd13f7d_0
-libcurand=10.3.7.77=hbd13f7d_0
-libcurl=8.11.1=hc9e6f67_0
-libdeflate=1.22=h5eee18b_0
-libedit=3.1.20230828=h5eee18b_0
-libev=4.33=h7f8727e_1
-libevent=2.1.12=hdbd6064_1
-libexpat=2.6.4=h5888daf_0
-libfaiss=1.9.0=cuda126h4727808_0_cuda
-libffi=3.4.4=h6a678d5_1
-libgcc=14.2.0=h77fa898_1
-libgcc-ng=14.2.0=h69a702a_1
-libgfortran-ng=11.2.0=h00389a5_1
-libgfortran5=11.2.0=h1234567_1
-libgomp=14.2.0=h77fa898_1
-libgrpc=1.62.2=h2d74bed_0
-liblapack=3.9.0=16_linux64_openblas
-libnghttp2=1.57.0=h2d74bed_0
-libnsl=2.0.1=hd590300_0
-libopenblas=0.3.21=h043d6bf_0
-libpng=1.6.39=h5eee18b_0
-libprotobuf=4.25.3=he621ea3_0
-libsqlite=3.46.0=hde9e2c9_0
-libssh2=1.11.1=h251f7ec_0
-libstdcxx=14.2.0=hc0a3c3a_1
-libstdcxx-ng=11.2.0=h1234567_1
-libthrift=0.15.0=h1795dd8_2
-libtiff=4.5.1=hffd6297_1
-libuuid=2.38.1=h0b41bf4_0
-libwebp-base=1.3.2=h5eee18b_1
-libxcrypt=4.4.36=hd590300_1
-libzlib=1.2.13=h4ab18f5_6
-lz4-c=1.9.4=h6a678d5_1
-markupsafe=2.1.3=py312h5eee18b_1
-matplotlib=3.10.0=pypi_0
-mpmath=1.3.0=py312h06a4308_0
-multidict=6.1.0=py312h5eee18b_0
-multiprocess=0.70.15=py312h06a4308_0
-ncurses=6.5=h2d0b736_2
-networkx=3.4.2=py312h06a4308_0
-numexpr=2.10.1=py312hd28fd6d_0
-numpy=1.26.4=py312h2809609_0
-numpy-base=1.26.4=py312he1a6c75_0
-nvidia-cublas-cu11=11.11.3.6=pypi_0
-nvidia-cuda-cupti-cu11=11.8.87=pypi_0
-nvidia-cuda-nvrtc-cu11=11.8.89=pypi_0
-nvidia-cuda-runtime-cu11=11.8.89=pypi_0
-nvidia-cudnn-cu11=9.1.0.70=pypi_0
-nvidia-cufft-cu11=10.9.0.58=pypi_0
-nvidia-curand-cu11=10.3.0.86=pypi_0
-nvidia-cusolver-cu11=11.4.1.48=pypi_0
-nvidia-cusparse-cu11=11.7.5.86=pypi_0
-nvidia-nccl-cu11=2.21.5=pypi_0
-nvidia-nvtx-cu11=11.8.86=pypi_0
-openjpeg=2.5.2=he7f1fd0_0
-openssl=3.4.0=h7b32b05_1
-orc=2.0.1=h2d29ad5_0
-packaging=24.2=py312h06a4308_0
-pandas=2.2.3=py312h6a678d5_0
-pillow=11.0.0=py312hcea889d_1
-pip=24.2=py312h06a4308_0
-propcache=0.2.0=py312h5eee18b_0
-pyarrow=17.0.0=py312h526ad5a_0
-pyparsing=3.2.1=pypi_0
-pysocks=1.7.1=py312h06a4308_0
-python=3.12.3=hab00c5b_0_cpython
-python-dateutil=2.9.0post0=py312h06a4308_2
-python-tzdata=2023.3=pyhd3eb1b0_0
-python-xxhash=3.5.0=py312h5eee18b_0
-python_abi=3.12=5_cp312
-pytz=2024.1=py312h06a4308_0
-pyyaml=6.0.2=py312h5eee18b_0
-re2=2022.04.01=h295c915_0
-readline=8.2=h5eee18b_0
-regex=2024.11.6=py312h5eee18b_0
-requests=2.32.3=py312h06a4308_1
-s2n=1.3.27=hdbd6064_0
-safetensors=0.4.5=py312hc50d6dc_1
-setuptools=75.1.0=py312h06a4308_0
-six=1.16.0=pyhd3eb1b0_1
-snappy=1.2.1=h6a678d5_0
-sympy=1.13.1=pypi_0
-tk=8.6.14=h39e8969_0
-tokenizers=0.20.1=py312h526025d_1
-torch=2.5.1+cu118=pypi_0
-torchaudio=2.5.1+cu118=pypi_0
-torchvision=0.20.1+cu118=pypi_0
-tqdm=4.66.5=py312he106c6f_0
-transformers=4.45.2=py312h06a4308_0
-triton=3.1.0=pypi_0
-typing-extensions=4.12.2=py312h06a4308_0
-typing_extensions=4.12.2=py312h06a4308_0
-tzdata=2024b=h04d1e81_0
-urllib3=2.3.0=py312h06a4308_0
-utf8proc=2.6.1=h5eee18b_1
-wheel=0.44.0=py312h06a4308_0
-xxhash=0.8.0=h7f8727e_3
-xz=5.4.6=h5eee18b_1
-yaml=0.2.5=h7b6447c_0
-yarl=1.18.0=py312h5eee18b_0
-zlib=1.2.13=h4ab18f5_6
-zstd=1.5.6=hc292b87_0
+accelerate==1.2.0
+aiohappyeyeballs @ file:///croot/aiohappyeyeballs_1732661981290/work
+aiohttp @ file:///croot/aiohttp_1725527756643/work
+aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
+attrs @ file:///croot/attrs_1729089401488/work
+Bottleneck @ file:///croot/bottleneck_1731058641041/work
+Brotli @ file:///croot/brotli-split_1714483155106/work
+certifi @ file:///croot/certifi_1738623731865/work/certifi
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+contourpy @ file:///croot/contourpy_1732540045555/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+datasets @ file:///croot/datasets_1716911606380/work
+dill @ file:///croot/dill_1715094664823/work
+faiss==1.9.0
+filelock @ file:///work/perseverance-python-buildout/croot/filelock_1701733993137/work
+fonttools @ file:///croot/fonttools_1737039080035/work
+frozenlist @ file:///croot/frozenlist_1730902802621/work
+fsspec @ file:///croot/fsspec_1714461537038/work
+ftfy==6.3.1
+gmpy2 @ file:///croot/gmpy2_1738085463648/work
+huggingface_hub @ file:///croot/huggingface_hub_1724853938404/work
+idna @ file:///croot/idna_1714398848350/work
+Jinja2 @ file:///croot/jinja2_1730902924303/work
+kiwisolver @ file:///croot/kiwisolver_1737039087198/work
+MarkupSafe @ file:///work/perseverance-python-buildout/croot/markupsafe_1707342994941/work
+matplotlib==3.10.0
+mkl-service==2.4.0
+mkl_fft @ file:///io/mkl313/mkl_fft_1730824109137/work
+mkl_random @ file:///io/mkl313/mkl_random_1730823916628/work
+mpmath @ file:///work/perseverance-python-buildout/croot/mpmath_1698864994882/work
+multidict @ file:///croot/multidict_1730905498140/work
+multiprocess @ file:///work/perseverance-python-buildout/croot/multiprocess_1698870874259/work
+networkx @ file:///croot/networkx_1720002482208/work
+ninja==1.11.1.2
+numexpr @ file:///croot/numexpr_1730215937391/work
+numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp312-cp312-linux_x86_64.whl#sha256=1d700f51d8b4fa684d858c9e3b56b1656bc5c82b6b79ff08d4e3b491c430059f
+open_clip_torch==2.30.0
+optimum-quanto==0.2.6
+packaging @ file:///croot/packaging_1720101850331/work
+pandas @ file:///croot/pandas_1732735089971/work/dist/pandas-2.2.3-cp312-cp312-linux_x86_64.whl#sha256=57b66702d418720ec8483f7c4ec7c08d41815316ad7ce09d5b7bbc34eefcfdfd
+pillow @ file:///croot/pillow_1738010226202/work
+ply @ file:///work/perseverance-python-buildout/croot/ply_1698846188635/work
+propcache @ file:///croot/propcache_1732303986938/work
+psutil==6.1.0
+pyarrow @ file:///croot/pyarrow_1721664224170/work/python
+pyparsing @ file:///croot/pyparsing_1731445506121/work
+PyQt5==5.15.10
+PyQt5_sip @ file:///croot/pyqt-split_1736540531116/work/pyqt_sip
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-dateutil @ file:///croot/python-dateutil_1716495738603/work
+pytz @ file:///croot/pytz_1713974312559/work
+PyYAML @ file:///croot/pyyaml_1728657952215/work
+quanto==0.2.0
+regex @ file:///croot/regex_1726669635272/work
+requests @ file:///croot/requests_1730999120400/work
+safetensors @ file:///croot/safetensors_1732227615904/work
+setuptools==75.1.0
+sip @ file:///croot/sip_1736541134699/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+sympy==1.13.1
+timm==1.0.14
+tokenizers==0.21.0
+torch==2.5.1
+torchvision==0.20.1
+tornado @ file:///croot/tornado_1733960490606/work
+tqdm @ file:///croot/tqdm_1724853939799/work
+transformers==4.47.1
+triton==3.1.0
+typing_extensions @ file:///croot/typing_extensions_1715268824938/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
+unicodedata2 @ file:///croot/unicodedata2_1736541023050/work
+urllib3 @ file:///croot/urllib3_1727769808118/work
+wcwidth==0.2.13
+wheel==0.44.0
+xxhash @ file:///work/perseverance-python-buildout/croot/python-xxhash_1698900334985/work
+yarl @ file:///croot/yarl_1732546845924/work
